# VollSeg

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Manual  Pipfile  README.md  _version.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  update_version.py  version_switcher.json  
.github/workflows/: deploy.yml  test_and_deploy.yml
css/: style_0.css  style_1.css  style_2.css
examples/: 03_Segmentation_correction.ipynb  ColabDenoisingEnhancement.ipynb  ColabModelPrediction.ipynb  ColabN2VTrain.ipynb  ColabTrainModel.ipynb  Cut.ipynb  DenoisingEnhancement.ipynb  InrImage_Napari-Copy1.ipynb  InrImage_Napari-Copy2.ipynb  InrImage_Napari-Copy3.ipynb  InrImage_Napari.ipynb  LocalModelPrediction.ipynb  LocalN2VTrain.ipynb  Noise2Void.ipynb  Optimizer.ipynb  Optimizer.py  TrainModel.ipynb  VolumeAugmentationColab.ipynb  VolumeAugmentationLocal.ipynb  WBC_Cyto.ipynb
examples/.ipynb_checkpoints/: ColabDenoisingEnhancement-checkpoint.ipynb  ColabModelPrediction-checkpoint.ipynb  ColabTrainModel-checkpoint.ipynb  Cut-checkpoint.ipynb  DenoisingEnhancement-checkpoint.ipynb  LocalModelPrediction-checkpoint.ipynb  Noise2Void-checkpoint.ipynb  Optimizer-checkpoint.ipynb
examples/Augmentation/: ColabPlanarAugmentation.ipynb  ColabVolumeAugmentation.ipynb  PlanarAugmentation.ipynb  SliceAugmentation.ipynb  VolumeAugmentation.ipynb  (+1 more)
localvollseg/: Augmentation2D.py  OptimizeThreshold.py  helpers.py
vollseg/: .Augmentation3D.py.swp  Augmentation2D.py  Augmentation2DC.py  Augmentation3D.py  CARE.py  CellPose.py  CellPose3D.py  IO.py  MASK.py  MASKUNET.py  OptimizeThreshold.py  PredictTiledLoader.py  Projection3D.py  SmartPatches.py  SmartSeeds2D.py  SmartSeeds3D.py  StarDist2D.py  StarDist3D.py  TrainTiledLoader.py  UNET.py  UNET2D.py  UNET3D.py  UNet3D.py  UNet3D_cellpose.py  __init__.py  _version.py  augmenter.py  base_model.py  cellposeutils.py  cellposeutils3D.py  folder.py  get_data.py  h5.py  helpers.py  inrimage.py  klb.py  matching.py  nmslabel.py  pretrained.py  pytorch_dataloader.py  (+7 more)
(+121 files in other folders)
