[metadata]
name = vollseg

description = Segmentation tool for biological cells of irregular size and shape in 3D and 2D.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kapoorlabs-CAPED/vollseg
author = Varun Kapoor,Claudia Carabana Garcia,Mari Tolonen
author_email = randomaccessiblekapoor@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Kapoorlabs-CAPED/vollseg/issues
    Documentation = https://github.com/Kapoorlabs-CAPED/vollseg#README.md
    Source Code = https://github.com/Kapoorlabs-CAPED/vollseg
    User Support = https://github.com/Kapoorlabs-CAPED/vollseg/issues

[options]
packages = find:
install_requires =
        pandas,
        stardist,
        scipy,
        tifffile,
        matplotlib,
        napari,
        cellpose-vollseg,
        torch,
        test_tube,
        lightning,

python_requires = >=3.8
include_package_data = True
package_dir =
    =vollseg
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = vollseg

[options.entry_points]
caped.manifest =
    vollseg = vollseg:caped.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
